<resources>
    <string name="app_name">PolicyFolio</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="facebook_app_id">368523337101447</string>
    <string name="fb_login_protocol_scheme">fb368523337101447</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_add_policy">AddPolicyActivity</string>
    <string name="number_policies">Number of Policies</string>
    <string name="total_cover">Total Cover</string>
    <string name="nextDue">Next Due Date Premium</string>
    <string name="returns">Returns</string>
    <string name="add_policy">Add Policy</string>
    <string name="renew_policy">Renew Policy</string>
    <string name="claim_support">Claim Support</string>
    <string name="legal_support">Legal Support</string>
    <string name="nominee_support">Nominee Support</string>
    <string name="promotions_and_offers">Promotions and Offers</string>
    <string name="document_vault">Document Vault</string>
    <string name="faqs">FAQs</string>
    <string name="need_help">Need Help</string>
    <string name="about_us">About Us</string>
    <string name="legal">Legal</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_nominee_support">NomineeSupportActivity</string>
    <string name="manage_policy">Manage Policy</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="policies_you_are_nominees_of">Policies you are nominees of</string>
    <string name="title_activity_promotions">PromotionsActivity</string>
    <string name="title_activity_claim_support">ClaimSupportActivity</string>
    <string name="claim_assistance_is_just_a_few_clicks_away">Claim Assistance is just a few clicks away</string>
    <string name="claim_assistance">Claim Assistance</string>
    <string name="track_claim">Track Claim</string>
    <string name="call_for_assistance">Call for Assistance</string>
    <string name="title_activity_document">DocumentActivity</string>
    <string name="adhaar_card">Adhaar Card</string>
    <string name="passport">Passport</string>
    <string name="pan_card">PAN Card</string>
    <string name="voter_id">Voter ID</string>
    <string name="driving_license">Driving License</string>
    <string name="ration_card">Ration Card</string>
    <string name="can_t_be_empty">Can\'t be empty!</string>
    <string name="email_id_mobile_number">Email ID / Mobile Number</string>
    <string name="password">Password / OTP</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="facebook">Facebook</string>
    <string name="gmail">Google</string>
    <string name="start_by_adding_your_existing_policy">Start by adding your Existing Policy.</string>
    <string name="add_policy_detail">Start Experiencing the Seamless Integration of your Policies Cover, Returns, Claims, Nominee Support and much more by adding your policy data here</string>
    <string name="add_a_new_policy">Add a \n New Policy</string>
    <string name="some_details_to_make_it_personal">Some details to make it personal</string>

</resources>
